Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42538

Android: text selection handles below other controls

XMLWordPrintable

    • Android
    • 19159469400ed6daa8bba1020eaaf149a16f1f18

      Test case:

      ColumnLayout {
          TextField { text: "Hello" }
          TextField { text: "World" }
      }
      

      Steps:

      • press and hold "Hello" so it gets selected

      Expected output:

      • text selection handles are above the second TextField

      Actual output:

      • text selection handles are below the second TextField

      Workaround:

      ColumnLayout {
          TextField { z: 1; text: "Hello" }
          TextField { text: "World" }
      }
      

      The text selection handles should be reparented to the window content item. NOTE: TextField and TextArea must track their own global scene position (eg. TextField in a Flickable) in order to keep the floating handle popups in correct places.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            5 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes