Add internal ScenePosListener

Makes it possible to implement floating text selection handle popups
that retain correct position whilst the scene position of the attached
text input control changes. The text input may be eg. in a Flickable
and thus does not receive geometry change notifications since its own
position in relation to the direct parent does not change.

Task-number: QTBUG-42538
Change-Id: I63cb15ddb1daa7d39cbe95d6421b171cd1c01596
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>